# use

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: README.md
.github/workflows/: release-arm64.yml  release.yml
src/: args.rs  main.rs
src/ffi/: beep.cpp  mod.rs  toast.cpp
src/ffi/Win32Helper/: include.h
src/mods/: mod.rs
src/mods/fs/: index.html  ls.rs  mod.rs  serve_dir.rs
src/mods/install/: mod.rs
src/mods/looper/: mod.rs
src/mods/oneport/: api.rs  config.rs  mod.rs
src/mods/rbc/: mod.rs
src/mods/rbs/: mod.rs
src/mods/toast/: mod.rs  web.rs
src/utils/: docker.rs  fs.rs  ip.rs  mod.rs
web/toast-web/: index.html  package-lock.json  package.json
web/toast-web/src/: App.vue  api.ts
web/toast-web/src/components/: HelloWorld.vue
